--- a/index.html
+++ b/index.html
@@ -78,13 +78,6 @@
         p{
             color: white;
         }
-        .copyright{
-            color: red;
-            font-size: 12px;
-            text-align: right;
-            margin-right: 55px;
-            font-weight: bolder;
-        }
         a{
             text-decoration: none;
             color: white;
@@ -109,10 +102,12 @@
             <div id="message">
                 <h2 class="message">Message to Admin</h2>
                 <p>*Dear Admin Your Security is Low So The Website Is Completely Messed Up*</p>
+                
                 <p>*We Do Not Forgive*</p>
                 <p>Greet'z To: Eng MuZ4ngui$54 - Dr K!d!m4 - Lµ1z V!4n4</p>
+                <p>[+ <strong>NO SYSTEM IS SAFE</strong> +]</p>
                 <p>-#{  <a href="https://github.com/joeln356" target="_blank">Contact Me</a>  }#-</p>
-                <p class="copyright">Copyright © 2024 Sm4rtB1t5</p>
+
             </div>
         </div>
     </div>
