--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <p>*Dear Admin Your Security is Low So The Website Is Completely Messed Up*</p>
                 
                 <p>*We Do Not Forgive*</p>
-                <p>Greet'z To: Eng MuZ4ngui$54 - Dr K!d!m4 - Lµ1z V!4n4</p>
+                <p>Greet'z To: MuZ4ngui$54 - K!d!m4 - Lµ1z V!4n4</p>
                 <p>[+ <strong>NO SYSTEM IS SAFE</strong> +]</p>
                 <p>-#{  <a href="https://github.com/joeln356" target="_blank">Contact Me</a>  }#-</p>
 
