--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             drops[i] = Math.random() * canvas.height;
         }
 
-        const chars = "01|/<->{}[]+=*&$ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        const chars = "$€¢£₽₨₩฿₺₮₱₭₴₦৲৳૱௹﷼₹₲₪₡₫₵₢₸₤₳₥₠₣₰ ₧ ₯ ₶ ₷ あ い う え お か き く け こ";
         const charsArr = chars.split("");
 
         function draw() {
