--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 drops[i] = Math.random() * canvas.height;
             }
 
-            const chars = "$€¢£₽₨₩฿₺₮₱₭₴৳૱௹﷼₹₲₪₡₫₵₢₸₤₳₥₠₣₰₧₯₶₷あいう";
+            const chars = "$€¢£₽₨₩฿₺う1000001111110";
             const charsArr = chars.split("");
 
             function draw() {
