--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         <div class="sim">
             <div class="content">
 
-                <h1 class="titulo">-[#~[!]_HaCkEd By: Sm4rtB1t5_[!]~#]-</h1>
+                <h1 class="titulo">-[#~[!]_HaCkEd By: SmartBits_[!]~#]-</h1>
 
-                <h1 class="mobile">-[#~[!]_HaCkEd By: Sm4rtB1t5_[!]~#]-</h1>
+                <h1 class="mobile">-[#~[!]_HaCkEd By: SmartBits_[!]~#]-</h1>
                 <h1 class="hack">HACKED!!!</h1>
                 <div id="message">
 
